# pyjpegxl

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
images/: test.jxl
python/pyjpegxl/: __init__.py  __init__.pyi  _async.py  _io.py  _jpeg_io.py
src/: lib.rs
tests/: test_benchmark.py  test_codec.py
