[package]
name = "pyjpegxl"
version = "0.1.0"
edition = "2021"
description = "Python bindings for JPEG XL encoding/decoding via jpegxl-rs"

[lib]
name = "pyjpegxl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module"] }
jpegxl-rs = { version = "0.13", features = ["vendored"] }
jpegxl-sys = { version = "0.12.1", features = ["vendored"] }
numpy = "0.23"
turbojpeg = { version = "1.4", default-features = true }
