[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyjpegxl"
version = "0.1.0"
description = "Python bindings for JPEG XL encoding/decoding (libjxl static linked)"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pyjpegxl._pyjpegxl"
